--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TomcatMavenApp</title>
+        <title>TalDanino</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Welcome to Tomcat Maven Application Home Page!</h1>
+        <h1>Welcome to Tal Danino's world!</h1>
     </body>
 </html>
