--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>TalDanino</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    </head>
-    <body>
-        <h1>Welcome to Tal Danino's world!</h1>
-    </body>
-</html>
+<script>
+
+	function display_ct5() {
+	var x = new Date()
+	var ampm = x.getHours( ) >= 12 ? ' PM' : ' AM';
+	
+	var x1=x.getMonth() + 1+ "/" + x.getDate() + "/" + x.getFullYear(); 
+	x1 = x1 + " - " +  x.getHours( )+ ":" +  x.getMinutes() + ":" +  x.getSeconds() + ":" + ampm;
+	document.getElementById('ct5').innerHTML = x1;
+	display_c5();
+	 }
+	 function display_c5(){
+	var refresh=1000; // Refresh rate in milli seconds
+	mytime=setTimeout('display_ct5()',refresh)
+	}
+	display_c5()
+	</script>
+	<span id='ct5' style="background-color: #ff0095"></span>
