--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,4 +15,4 @@
 	}
 	display_c5()
 	</script>
-	<span id='ct5' style="background-color: #00FFFF"></span>
+	<span id='ct5' style="background-color: #ff095"></span>
